--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "comfyui-flowmatching-upscaler"
 description = ""
-version = "1.0.0"
-license = { text = "MIT License" }
 dependencies = ["numpy>=2.0", "torch>=2.1", "einops>=0.6", "aiohttp>=3.9"]
+version = "1.0.0"
+license = "LICENSE"
 classifiers = [
     "Operating System :: OS Independent",
 ]
