--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
 name = "comfyui-flowmatching-upscaler"
-description = ""
+description = "Progressive flow-matching upscaler nodes plus DyPE patching for Qwen Image."
 dependencies = ["numpy>=2.0", "torch>=2.1", "einops>=0.6", "aiohttp>=3.9"]
-version = "1.0.8"
+version = "2.0.0"
 license = "LICENSE"
 classifiers = [
     "Operating System :: OS Independent",
